# vapor

./: .gitignore  Cargo.toml  FEATURE_FLAGS.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  README.md  VALIDATION_SUMMARY.md  VERIFICATION.md  modular_schema_solution.md  test_schema_composition.rs  wire-services.md  wiring.md
.github/scripts/: cd.sh
.github/workflows/: cd.yml  ci.yml  docs.yml
build-support/: start_impl.rs  ubsan_stubs.rs
docs/: book.toml
docs/src/: introduction.md
scripts/: audit-feature-independence.sh  detect-aws-services.sh
specs/: architecture-changes.md
src/: error.rs  lib.rs  main.rs  server.rs
src/aws/: acm.rs  acm_pca.rs  apigateway.rs  apigatewayv2.rs  app_runner.rs  appconfig.rs  appsync.rs  athena.rs  audit_manager.rs  autoscaling.rs  backup.rs  batch.rs  bedrock.rs  budgets.rs  cloudformation.rs  cloudfront.rs  cloudtrail.rs  cloudwatch.rs  cloudwatch_logs.rs  codeartifact.rs  codebuild.rs  codecommit.rs  codedeploy.rs  codepipeline.rs  cognito.rs  comprehend.rs  config.rs  config_svc.rs  connect.rs  control_tower.rs  cost_explorer.rs  datasync.rs  detective.rs  direct_connect.rs  dms.rs  documentdb.rs  dynamodb.rs  ec2.rs  ecr.rs  ecs.rs  (+64 more)
src/schema/: mod.rs  root.rs
src/schema/acm/: queries.rs  types.rs
src/schema/acm_pca/: queries.rs  types.rs
src/schema/apigateway/: queries.rs  types.rs
src/schema/apigatewayv2/: queries.rs  types.rs
src/schema/app_runner/: queries.rs  types.rs
src/schema/appconfig/: queries.rs  types.rs
src/schema/appsync/: queries.rs  types.rs
src/schema/asg/: queries.rs  types.rs
src/schema/athena/: queries.rs  types.rs
src/schema/audit_manager/: queries.rs  types.rs
src/schema/aws/: mod.rs  registry.rs  test_composition.rs
src/schema/backup/: queries.rs  types.rs
src/schema/batch/: queries.rs  types.rs
src/schema/bedrock/: queries.rs  types.rs
src/schema/budgets/: queries.rs  types.rs
src/schema/cloudformation/: queries.rs  types.rs
src/schema/cloudfront/: queries.rs  types.rs
src/schema/cloudtrail/: queries.rs  types.rs
src/schema/cloudwatch/: queries.rs  types.rs
src/schema/codeartifact/: queries.rs  types.rs
src/schema/codebuild/: queries.rs  types.rs
src/schema/codecommit/: queries.rs  types.rs
src/schema/codedeploy/: queries.rs  types.rs
src/schema/codepipeline/: queries.rs  types.rs
src/schema/cognito/: queries.rs  types.rs
src/schema/common/: types.rs
src/schema/comprehend/: queries.rs  types.rs
src/schema/config_svc/: queries.rs  types.rs
src/schema/connect/: queries.rs  types.rs
src/schema/control_tower/: queries.rs  types.rs
src/schema/cost_explorer/: queries.rs  types.rs
src/schema/datasync/: queries.rs  types.rs
src/schema/detective/: queries.rs  types.rs
src/schema/direct_connect/: queries.rs  types.rs
src/schema/dms/: queries.rs  types.rs
src/schema/documentdb/: queries.rs  types.rs
src/schema/dynamodb/: queries.rs  types.rs
src/schema/ec2/: mutations.rs  queries.rs  types.rs
src/schema/ecr/: queries.rs  types.rs
src/schema/ecs/: queries.rs  types.rs
src/schema/efs/: queries.rs  types.rs
src/schema/eks/: queries.rs  types.rs
src/schema/elastic_beanstalk/: queries.rs  types.rs
src/schema/elasticache/: queries.rs  types.rs
src/schema/elbv2/: queries.rs  types.rs
src/schema/emr/: queries.rs  types.rs
src/schema/eventbridge/: queries.rs  types.rs
src/schema/firehose/: queries.rs  types.rs
src/schema/fms/: queries.rs  types.rs
src/schema/fsx/: queries.rs  types.rs
src/schema/global_accelerator/: queries.rs  types.rs
src/schema/glue/: queries.rs  types.rs
src/schema/guardduty/: queries.rs  types.rs
src/schema/health/: queries.rs  types.rs
src/schema/iam/: queries.rs  types.rs
src/schema/inspector/: queries.rs  types.rs
src/schema/iot/: queries.rs  types.rs
src/schema/keyspaces/: queries.rs  types.rs
src/schema/kinesis/: queries.rs  types.rs
src/schema/kms/: queries.rs  types.rs
src/schema/lake_formation/: queries.rs  types.rs
src/schema/lambda/: queries.rs  types.rs
src/schema/license_manager/: queries.rs  types.rs
src/schema/lightsail/: queries.rs  types.rs
src/schema/macie/: queries.rs  types.rs
src/schema/memorydb/: queries.rs  types.rs
src/schema/mq/: queries.rs  types.rs
src/schema/msk/: queries.rs  types.rs
src/schema/neptune/: queries.rs  types.rs
src/schema/network_firewall/: queries.rs  types.rs
src/schema/opensearch/: queries.rs  types.rs
src/schema/organizations/: queries.rs  types.rs
src/schema/pinpoint/: queries.rs  types.rs
src/schema/polly/: queries.rs  types.rs
src/schema/qldb/: queries.rs  types.rs
src/schema/quicksight/: queries.rs  types.rs
src/schema/ram/: queries.rs  types.rs
src/schema/rds/: queries.rs  types.rs
src/schema/redshift/: queries.rs  types.rs
src/schema/redshift_serverless/: queries.rs  types.rs
src/schema/rekognition/: queries.rs  types.rs
src/schema/route53/: queries.rs  types.rs
src/schema/s3/: queries.rs  types.rs
src/schema/sagemaker/: queries.rs  types.rs
src/schema/secrets_manager/: queries.rs  types.rs
src/schema/security_hub/: queries.rs  types.rs
src/schema/service_quotas/: queries.rs  types.rs
src/schema/ses/: queries.rs  types.rs
src/schema/shield/: queries.rs  types.rs
src/schema/sns/: queries.rs  types.rs
src/schema/sqs/: queries.rs  types.rs
src/schema/ssm/: queries.rs  types.rs
src/schema/sso_admin/: queries.rs  types.rs
src/schema/step_functions/: queries.rs  types.rs
src/schema/storage_gateway/: queries.rs  types.rs
src/schema/sts/: queries.rs  types.rs
src/schema/timestream/: queries.rs  types.rs
src/schema/transcribe/: queries.rs  types.rs
src/schema/transfer/: queries.rs  types.rs
src/schema/translate/: queries.rs  types.rs
src/schema/vpc/: queries.rs  types.rs
src/schema/wafv2/: queries.rs  types.rs
src/schema/workspaces/: queries.rs  types.rs
src/schema/xray/: queries.rs  types.rs
