[package]
name = "vapor"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "vapor"
path = "src/main.rs"

[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[dependencies]
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
aws-sdk-ec2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudwatch = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudwatchlogs = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-autoscaling = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-elasticloadbalancingv2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-rds = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecs = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sqs = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sns = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-secretsmanager = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-route53 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-dynamodb = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-opensearch = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-eks = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-acm = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-lambda = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-iam = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ecr = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudfront = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-elasticache = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudformation = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-eventbridge = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-guardduty = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-config = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-codepipeline = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-codebuild = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-codedeploy = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-kinesis = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-firehose = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-kafka = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-redshift = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-redshiftserverless = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-memorydb = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sfn = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-costexplorer = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sts = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudtrail = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-wafv2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-glue = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-efs = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-athena = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-organizations = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cognitoidentityprovider = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-appsync = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-backup = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-servicequotas = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-health = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-inspector2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-securityhub = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-neptune = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-docdb = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-emr = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sagemaker = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-batch = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-apigateway = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-apigatewayv2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-transfer = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-appconfig = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-globalaccelerator = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-directconnect = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-macie2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-networkfirewall = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-shield = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssoadmin = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-acmpca = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ram = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-controltower = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-fms = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-auditmanager = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-detective = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sesv2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-elasticbeanstalk = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-apprunner = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-fsx = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-mq = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-databasemigration = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-workspaces = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-storagegateway = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-datasync = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-lightsail = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-qldb = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-keyspaces = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-bedrock = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-xray = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-timestreamwrite = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-timestreamquery = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-lakeformation = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-quicksight = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-comprehend = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-rekognition = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-transcribe = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-translate = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-polly = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-codeartifact = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-codecommit = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-iot = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-licensemanager = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-budgets = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-connect = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-pinpoint = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
futures = "0.3"
base64 = "0.22"
chrono = "0.4"
serde_json = "1"

[dev-dependencies]
aws-smithy-types = "1"

[features]
default = ["ec2", "s3", "lambda"]
ec2 = ["dep:aws-sdk-ec2"]
ssm = ["dep:aws-sdk-ssm"]
cloudwatch = ["dep:aws-sdk-cloudwatch", "cloudwatchlogs"]
cloudwatchlogs = ["dep:aws-sdk-cloudwatchlogs"]
autoscaling = ["dep:aws-sdk-autoscaling"]
elbv2 = ["dep:aws-sdk-elasticloadbalancingv2"]
rds = ["dep:aws-sdk-rds"]
ecs = ["dep:aws-sdk-ecs"]
kms = ["dep:aws-sdk-kms"]
sqs = ["dep:aws-sdk-sqs"]
sns = ["dep:aws-sdk-sns"]
secretsmanager = ["dep:aws-sdk-secretsmanager"]
route53 = ["dep:aws-sdk-route53"]
dynamodb = ["dep:aws-sdk-dynamodb"]
opensearch = ["dep:aws-sdk-opensearch"]
eks = ["dep:aws-sdk-eks"]
acm = ["dep:aws-sdk-acm"]
lambda = ["dep:aws-sdk-lambda"]
s3 = ["dep:aws-sdk-s3"]
iam = ["dep:aws-sdk-iam"]
ecr = ["dep:aws-sdk-ecr"]
cloudfront = ["dep:aws-sdk-cloudfront"]
elasticache = ["dep:aws-sdk-elasticache"]
cloudformation = ["dep:aws-sdk-cloudformation"]
eventbridge = ["dep:aws-sdk-eventbridge"]
guardduty = ["dep:aws-sdk-guardduty"]
config = ["dep:aws-sdk-config"]
codepipeline = ["dep:aws-sdk-codepipeline"]
codebuild = ["dep:aws-sdk-codebuild"]
codedeploy = ["dep:aws-sdk-codedeploy"]
kinesis = ["dep:aws-sdk-kinesis"]
firehose = ["dep:aws-sdk-firehose"]
kafka = ["dep:aws-sdk-kafka", "ec2"]
redshift = ["dep:aws-sdk-redshift"]
redshiftserverless = ["dep:aws-sdk-redshiftserverless"]
memorydb = ["dep:aws-sdk-memorydb"]
sfn = ["dep:aws-sdk-sfn"]
costexplorer = ["dep:aws-sdk-costexplorer"]
sts = ["dep:aws-sdk-sts"]
cloudtrail = ["dep:aws-sdk-cloudtrail"]
wafv2 = ["dep:aws-sdk-wafv2"]
glue = ["dep:aws-sdk-glue"]
efs = ["dep:aws-sdk-efs"]
athena = ["dep:aws-sdk-athena"]
organizations = ["dep:aws-sdk-organizations"]
cognitoidentityprovider = ["dep:aws-sdk-cognitoidentityprovider"]
appsync = ["dep:aws-sdk-appsync"]
backup = ["dep:aws-sdk-backup"]
servicequotas = ["dep:aws-sdk-servicequotas"]
health = ["dep:aws-sdk-health"]
inspector2 = ["dep:aws-sdk-inspector2"]
securityhub = ["dep:aws-sdk-securityhub"]
neptune = ["dep:aws-sdk-neptune"]
docdb = ["dep:aws-sdk-docdb"]
emr = ["dep:aws-sdk-emr"]
sagemaker = ["dep:aws-sdk-sagemaker"]
batch = ["dep:aws-sdk-batch"]
apigateway = ["dep:aws-sdk-apigateway"]
apigatewayv2 = ["dep:aws-sdk-apigatewayv2"]
transfer = ["dep:aws-sdk-transfer"]
appconfig = ["dep:aws-sdk-appconfig"]
globalaccelerator = ["dep:aws-sdk-globalaccelerator"]
directconnect = ["dep:aws-sdk-directconnect"]
macie2 = ["dep:aws-sdk-macie2"]
networkfirewall = ["dep:aws-sdk-networkfirewall"]
shield = ["dep:aws-sdk-shield"]
ssoadmin = ["dep:aws-sdk-ssoadmin"]
acmpca = ["dep:aws-sdk-acmpca"]
ram = ["dep:aws-sdk-ram"]
controltower = ["dep:aws-sdk-controltower"]
fms = ["dep:aws-sdk-fms"]
auditmanager = ["dep:aws-sdk-auditmanager"]
detective = ["dep:aws-sdk-detective"]
sesv2 = ["dep:aws-sdk-sesv2"]
elasticbeanstalk = ["dep:aws-sdk-elasticbeanstalk"]
apprunner = ["dep:aws-sdk-apprunner"]
fsx = ["dep:aws-sdk-fsx"]
mq = ["dep:aws-sdk-mq"]
dms = ["dep:aws-sdk-databasemigration"]
workspaces = ["dep:aws-sdk-workspaces"]
storagegateway = ["dep:aws-sdk-storagegateway"]
datasync = ["dep:aws-sdk-datasync"]
lightsail = ["dep:aws-sdk-lightsail"]
qldb = ["dep:aws-sdk-qldb"]
keyspaces = ["dep:aws-sdk-keyspaces"]
bedrock = ["dep:aws-sdk-bedrock"]
xray = ["dep:aws-sdk-xray"]
timestream = ["dep:aws-sdk-timestreamwrite", "dep:aws-sdk-timestreamquery"]
lakeformation = ["dep:aws-sdk-lakeformation"]
quicksight = ["dep:aws-sdk-quicksight"]
comprehend = ["dep:aws-sdk-comprehend"]
rekognition = ["dep:aws-sdk-rekognition"]
transcribe = ["dep:aws-sdk-transcribe"]
translate = ["dep:aws-sdk-translate"]
polly = ["dep:aws-sdk-polly"]
codeartifact = ["dep:aws-sdk-codeartifact"]
codecommit = ["dep:aws-sdk-codecommit"]
iot = ["dep:aws-sdk-iot"]
licensemanager = ["dep:aws-sdk-licensemanager"]
budgets = ["dep:aws-sdk-budgets"]
connect = ["dep:aws-sdk-connect"]
pinpoint = ["dep:aws-sdk-pinpoint"]

# Feature groups for easier combinations
# Basic AWS services
basic = ["ec2", "s3", "lambda", "ssm"]
# Web services
web = ["ec2", "elbv2", "s3", "lambda", "apigateway"]
# Data services
data = ["s3", "dynamodb", "redshift", "athena", "glue"]
# Monitoring and management
monitoring = ["cloudwatch", "cloudwatchlogs", "config", "inspector2", "securityhub"]
# DevOps services
devops = ["codepipeline", "codebuild", "codedeploy", "cloudformation"]
# Curated set of the ~26 most commonly used services, built for prebuilt GitHub releases.
# Users with a broader footprint should build their own binary — see scripts/detect-aws-services.sh.
release = [
    "ec2", "s3", "lambda", "iam", "rds", "dynamodb",
    "cloudwatch", "cloudwatchlogs", "sqs", "sns", "kms", "secretsmanager",
    "ecs", "ecr", "eks", "elbv2", "autoscaling", "route53",
    "cloudfront", "cloudformation", "sts", "apigateway", "apigatewayv2", "eventbridge",
    "ssm", "kinesis",
]

[profile.release]
codegen-units = 1
strip = true
